--- a/src/app/m-trabajo-bitacora/componentes/verificacion-inyector/verificacion-inyector.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-inyector/verificacion-inyector.component.html
@@ -155,7 +155,7 @@
         <tr *ngFor="let produccion of datosAntes" style="font-size: 11px">
 
          
-        <td>{{produccion.Fecha | date:'dd/MM/yyyy' }} </td>
+        <td>{{produccion.f_produccion | date:'dd/MM/yyyy' }} </td>
         <td>{{produccion.Baipd}} </td>
        
        
@@ -200,7 +200,7 @@
     <tbody>
       <tr *ngFor="let produccion of datosDespues" style="font-size: 11px">
 
-        <td>{{produccion.Fecha  | date:'dd/MM/yyyy' }} </td>
+        <td>{{produccion.f_produccion  | date:'dd/MM/yyyy' }} </td>
         <td>{{produccion.Baipd}} </td>
 
       </tr>
@@ -382,7 +382,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let verificacionProduccion of produccionList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
+          <tr *ngFor="let verificacionProduccion of produccionList | paginate: { id: 'paginator',itemsPerPage: 0, currentPage: 0 , totalItems: 10}; let i=index;" style="font-size: 11px">
 
             <td>{{verificacionProduccion.codVerificacion}} </td>
             <td>{{verificacionProduccion.valor_antes}} </td>
@@ -394,13 +394,23 @@
             <td>{{verificacionProduccion.estado| estadoBitacora}} </td>
             <td>{{verificacionProduccion.fecha_actualizacion | date:'dd/MM/yyyy'}} </td>
             <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="debloquearActualizacion(verificacionProduccion)"></i> 
-              <i *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '3'"
-              (click)="openModalInformeAnular(InformeTempalteAnular, verificacionProduccion)">
-              <i class="fa fa-times fa-2x"></i>
-            </i> 
-                        
-          </td>
+
+              <div class="btn-group dropleft" *ngIf="portafolio.estado!=0">
+                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-cog"></i>
+                </button>
+  
+                <div class="dropdown-menu">
+                <button *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '3'" 
+                (click)="openModalInformeAnular(InformeTempalteAnular, verificacionProduccion)" class="dropdown-item" type="button">
+                <i class="fa fa-times"></i>Anular</button>
+                <button *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '3'" 
+                (click)="debloquearActualizacion(verificacionProduccion)" class="dropdown-item" type="button">
+                <i class="fa fa-pencil"></i> Editar</button>
+              </div>
+            </div>
+            </td>
           </tr>
 
         </tbody>
@@ -448,3 +458,7 @@
 </div>
 
 
+
+<ng-template #customLoadingTemplate> </ng-template>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+</ngx-loading>
